[package]
name = "win16ne"
version = "0.1.1"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>", "Alexey Tolstopyatov <atolstopyatov2017@vk.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
